DRW: Culling: Precise BBox extraction does not work correctly #54609

Closed
opened 2018-04-15 22:35:42 +02:00 by Clément Foucault · 3 comments

Revert dd6fcd2f21

Open file cascade_bug.blend

The shadow should not be interrupted. It's cause by some culling problem.

I don't know if this could help but the cascade shadow map is special and does not use a projection matrix centered around the view Z axis. The projection is orthographic though.

Revert dd6fcd2f2109 Open file [cascade_bug.blend](https://archive.blender.org/developer/F2705975/cascade_bug.blend) The shadow should not be interrupted. It's cause by some culling problem. I don't know if this could help but the cascade shadow map is special and does not use a projection matrix centered around the view Z axis. The projection is orthographic though.
Germano Cavalcante was assigned by Clément Foucault 2018-04-15 22:35:42 +02:00
Author
Member

Added subscriber: @fclem

Added subscriber: @fclem
Clément Foucault changed title from DRW: Culling precise BBox extraction does not work correctly to DRW: Culling: Precise BBox extraction does not work correctly 2018-04-15 22:36:26 +02:00

This issue was referenced by b31ebd8c5c

This issue was referenced by b31ebd8c5c5554561f43202c8a377e85d0aceca9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#54609
No description provided.