Fix T54609: Erros in precise BBox extraction algorithm